--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.mapdb</groupId>
+    	<artifactId>mapdb</artifactId>
+    	<version>3.0.8</version>
+    </dependency>
   </dependencies>
 </project>
